tests/invalid/coerce_mode_error2.err_exp
coerce_mode_error2.m:039: In clause for `test1(out)':
coerce_mode_error2.m:039:   in coerce expression:
coerce_mode_error2.m:039:   mode error: in the coerced term:
coerce_mode_error2.m:039:   in the second argument of function symbol `foo':
coerce_mode_error2.m:039:   cannot convert the [38;5;87mcoerced subterm[39;49m from type
coerce_mode_error2.m:039:   `coerce_mode_error2.fruit' to
coerce_mode_error2.m:039:   `coerce_mode_error2.citrus' because the following
coerce_mode_error2.m:039:   function symbols in the input term's
coerce_mode_error2.m:039:   instantiatedness are [38;5;203mnot part of the result type:[39;49m
coerce_mode_error2.m:039:     [38;5;203m`apple',[39;49m
coerce_mode_error2.m:039:     [38;5;203m`banana'.[39;49m
coerce_mode_error2.m:050: In clause for `test2(out)':
coerce_mode_error2.m:050:   in coerce expression:
coerce_mode_error2.m:050:   mode error: cannot convert the [38;5;87mcoerced term[39;49m from
coerce_mode_error2.m:050:   type
coerce_mode_error2.m:050:   `coerce_mode_error2.foo(coerce_mode_error2.fruit)'
coerce_mode_error2.m:050:   to `coerce_mode_error2.foo_citrus' because the
coerce_mode_error2.m:050:   following function symbol in the input term's
coerce_mode_error2.m:050:   instantiatedness is [38;5;203mnot part of the result type:[39;49m
coerce_mode_error2.m:050:     [38;5;203m`nil'.[39;49m
